<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Boomerang</string>
    <string name="action_settings">Settings</string>
    <string name="add_picture">New Picture</string>
    <string name="client">Client Name</string>
    <string name="height">Height (inches)</string>
    <string name="length">Length (inches)</string>
    <string name="depth">Depth (inches)</string>
    <string name="item_type">Item Type</string>
    <string name="add_items">Add Items</string>
    <string name="scan_items">Scan Items</string>
    <string name="title_activity_add_items">AddItems</string>
    <string name="title_activity_choose_client">ChooseClient</string>
    <string name="pick_client">Pick Client</string>
    <string name="condition">Condition</string>

    <string-array name="condition_spinner">
        <item>New- Original Packing</item>
        <item>New</item>
        <item>Used - Excellent</item>
        <item>Used - Good</item>
        <item>Used - Fair</item>
        <item>Used - Poor</item>
    </string-array>

    <string name="add_item">Add Item</string>
    <string name="album_name">CameraSample</string>
    <string name="submit">Submit</string>
    <string name="gallery">Gallery</string>
    <string name="color">Color</string>
    <string name="Material">Material</string>
    <string name="min_price_label">Min Price</string>
    <string name="comments_label">Comments</string>
    <string name="donate_label">Donate to charity if undsold?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="item_type">
        <item>Appliences</item>
        <item>Artwork</item>
        <item>Bikes</item>
        <item>Building Material</item>
        <item>Electronics</item>
        <item>Furniture</item>
        <item>Large Furniture</item>
        <item>Small Furniture</item>
        <item>Personal Accessories</item>
        <item>Shoes and Clothes</item>
        <item>Sporting Goods</item>
        <item>Tools</item>
        <item>Misc</item>
    </string-array>
    <string-array name="color_string">
        <item>Black</item>
        <item>White</item>
        <item>Yellow</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Gray</item>
        <item>Brown</item>
        <item>Natural</item>
        <item>Other</item>
    </string-array>
    <string-array name="material_string">
        <item>Wood</item>
        <item>Plastic</item>
        <item>Metal</item>
        <item>Glass</item>
        <item>Fabric</item>
        <item>Stone</item>
        <item>Combination</item>
        <item>Other</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_item_list">ItemList</string>
    <string name="itemList">Item List</string>
    <string name="title_activity_item_summary">ItemSummary</string>
    <string name="hello_world">Hello world!</string>
    <string name="anotherItem">Add Another Item</string>

</resources>
