<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/add_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_picture"
            android:onClick="addPicture" />

        <Gallery
            android:id="@+id/item_images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.31" />

        <TextView
            android:id="@+id/itemTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_type" />

        <Spinner
            android:id="@+id/item_type_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/condition_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition" />

        <Spinner
            android:id="@+id/condition_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height" />

        <EditText
            android:id="@+id/height_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length" />

        <EditText
            android:id="@+id/lenth_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/depth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/depth" />

        <EditText
            android:id="@+id/depth_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/color_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color" />

        <Spinner
            android:id="@+id/color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/material_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Material" />

        <Spinner
            android:id="@+id/material_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/minprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_price_label" />

        <EditText
            android:id="@+id/minprice_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <CheckBox
            android:id="@+id/donate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_label" />

        <TextView
            android:id="@+id/comments_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comments_label" />

        <EditText
            android:id="@+id/comments_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:orientation="horizontal" >


        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" 
            android:onClick="goToSummary"
             />

        <Button
            android:id="@+id/anotherItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anotherItem"
            android:onClick="addAnotherItem" />
        
        <Button
            android:id="@+id/gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
        	android:onClick="goGallery" />
                </LinearLayout>

    </LinearLayout>



    </ScrollView>
</RelativeLayout>